# overleaf-mcp

./: .gitignore  APEX_SYSTEM_MATRIX.md  CLAUDE.md  GLOBAL_SYNC_STAMP.json  QUALITY_ASSURANCE_MANIFEST.md  README.md  activate_env.sh  pyproject.toml  requirements.txt  run_latex_demo.sh  test_client.py  test_mcp_server.py
examples/: README.md  advanced_client_example.py  client_usage_example.py  template_and_converter_demo.py
examples/demo_output/: example.tex  sample_article.tex  sample_letter.tex
examples/demo_output/html_output/: sample_article.html  sample_letter.html
examples/demo_output/templates/: article.tex  letter.tex
examples/test_strike_filing/: main.tex  narrative.tex
overleaf_mcp/: __init__.py  cli.py  server.py
overleaf_mcp/latex/: README.md  compiler.py  converter.py  generator.py  parser.py  template.py
overleaf_mcp/tools/: __init__.py  document_tools.py  element_tools.py  format_tools.py  overleaf_tools.py
overleaf_mcp/utils/: file_utils.py  latex_utils.py
tests/: __init__.py  test_demo.py
tests/latex/: __init__.py  test_converter.py  test_template.py
tests/utils/: __init__.py  test_file_utils.py  test_latex_utils.py
