[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "overleaf-mcp"
version = "0.1.0"
description = "An MCP server for LaTeX editing with Overleaf integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Overleaf MCP Team"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "TexSoup>=0.3.1",
    "pylatexenc>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
]

[tool.setuptools]
packages = ["overleaf_mcp"]

[project.scripts]
overleaf-mcp = "overleaf_mcp.cli:main" 